# football_bot_docs

./: .gitignore  404.html  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
css/: fonts.css
docs/: index.md
docs/1_users_mini/: index.html
docs/2_club_admins/: index.html
docs/club_admins/1_start/: index.html
docs/docs/: 1_users_mini.md  2_club_admins.md
docs/docs/club_admins/: 1_start.md
docs/docs/users_mini/: 1_registration.md
docs/minimal/: 1. registration.md
docs/users_mini/: 2_main_menu.md  3_user_profile.md  4_rate_referee.md
docs/users_mini/1_registration/: index.html
docs/users_mini/2_main_menu/: index.html
docs/users_mini/3_user_profile/: index.html
docs/users_mini/4_rate_referee/: index.html
minimal/: main-menu.md  rate_referee.md  registration.md
minimal/1. registration/: index.html
minimal/2. main-menu/: index.html
minimal/3. user-profile/: index.html
minimal/4. rate_referee/: index.html
minimal/main-menu/: index.html
minimal/rate_referee/: index.html
minimal/registration/: index.html
minimal/user-profile/: index.html
search/: search_index.json
